--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "swagger-ui-express": "^4.3.0"
+    "swagger-ui-express": "^4.3.0",
+    "xlsx": "^0.17.5"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
